<resources>
    <string name="app_name">POuL BITS</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="updating_bits_status">Updating B.I.T.S. status</string>
    <string name="channel_bits_retrieving_status_description">Displayed while the app is running in background to
        retrieve the
        headquarters status.
    </string>
    <string name="channel_bits_retrieving_status_name">B.I.T.S. status update service</string>
    <string name="updating_bits_desc">Retrieving headquarters state from server</string>
    <string name="poul_logo_img_desc">POuL logo</string>
    <string name="headquarters_open">HQs OPEN</string>
    <string name="headquarters_closed">HQs CLOSED</string>
    <string name="headquarters_gialla">HQs GIALLA</string>
    <string name="opened_from">Opened from</string>
    <string name="closed_from">Closed from</string>
    <string name="last_changed">Last changed</string>
    <string name="last_msg_from">Last message from</string>
    <string name="poul_presence_heatmap_image_desc">POuL presence heatmap</string>
    <string name="presence_load_error_snackbar">Unable to load presence heatmap</string>
    <string name="status_retrieve_failure_card">Failed to retrieve headquarters status information</string>
    <string name="check_network_connection">Check your network connection</string>
    <string name="refresh">Refresh</string>
    <string name="no_information">No information</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_temp_unit">Temperature unit</string>
    <string name="settings_temp_unit_desc">Use this unit to display temperatures</string>
    <string name="settings_fullscreen_desc">Hide status bar while the app is open</string>
    <string name="settings_fullscreen_desc_off">Status and navigation bar are always shown</string>
    <string name="settings_fullscreen_desc_on">Status and navigation bar will be hidden</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="action_about">About</string>
    <string name="settings_fullscreen">Fullscreen</string>
    <string name="settings_enable_mqtt">Enable MQTT service</string>
    <string name="settings_enable_mqtt_desc">Subscribe to local MQTT server</string>
    <string name="settings_enable_mqtt_desc_off">Not subscribed to local MQTT server</string>
    <string name="settings_enable_mqtt_desc_on">Subscribed to local MQTT server</string>
    <string name="settings_http">HTTP</string>
    <string name="settings_http_url">HTTP JSON status data URL</string>
    <string name="settings_http_url_desc">Default: https://bits.poul.org/data</string>
    <string name="settings_http_presence_img_url">Presence image URL</string>
    <string name="settings_http_presence_img_url_desc">Default: https://bits.poul.org/bits_presence.png</string>

    <string-array name="settings_temperature_unit_titles">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="settings_temperature_unit_values">
        <item>CELSIUS</item>
        <item>FAHRENHEIT</item>
        <item>KELVIN</item>
    </string-array>
</resources>
