<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
>
    <PreferenceCategory android:title="@string/settings_appearance">
        <ListPreference
                android:title="@string/settings_temp_unit"
                android:summary="@string/settings_temp_unit_desc"
                android:entries="@array/settings_temperature_unit_titles"
                android:entryValues="@array/settings_temperature_unit_values"
                android:key="temp_unit"
                android:defaultValue="CELSIUS"
        />

        <SwitchPreference
                android:title="Fullscreen"
                android:summary="@string/settings_fullscreen_desc"
                android:summaryOff="@string/settings_fullscreen_desc_off"
                android:summaryOn="@string/settings_fullscreen_desc_on"
                android:key="fullscreen"
                android:defaultValue="false"
        />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_http">
        <EditTextPreference
                android:title="@string/settings_http_url"
                android:summary="@string/settings_http_url_desc"
                android:key="http_json_status_url"
                android:inputType="textUri"
                android:defaultValue="https://bits.poul.org/data"
        />

        <EditTextPreference
                android:title="@string/settings_http_presence_img_url"
                android:summary="@string/settings_http_presence_img_url_desc"
                android:key="http_presence_svg_uri"
                android:inputType="textUri"
                android:defaultValue="https://bits.poul.org/presence.svg"
        />
    </PreferenceCategory>
</PreferenceScreen>